[package]
name = "bevy_mikktspace"
version = "0.17.0-dev"
edition = "2024"
authors = [
    "Benjamin Wasty <benny.wasty@gmail.com>",
    "David Harvey-Macaulay <alteous@outlook.com>",
    "Layl Bongers <LaylBongers@users.noreply.github.com>",
]
description = "Safe rust implementation of Mikkelsen tangent space algorithm"
documentation = "https://docs.rs/bevy_mikktspace"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy_mikktspace"
license = "Zlib AND (MIT OR Apache-2.0)"
keywords = ["bevy", "3D", "graphics", "algorithm", "tangent"]
rust-version = "1.85.0"

exclude = ["/data", "/generator"]

[features]
default = ["std"]

std = []
libm = ["dep:libm"]

[dependencies]
libm = { version = "0.2", default-features = false, optional = true }
bitflags = "2.3"

[dev-dependencies]
mikktspace-sys = "0.1.1"
wavefront_obj = "11.0.0"

[[example]]
name = "cube_tangents"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
